<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="titleActivityCrime">CrimeActivity</string>
    <string name="crimeTitleHint">Enter crime\'s title</string>
    <string name="crimeTitleLabel">Title</string>
    <string name="crimeDetailLabel">Details</string>
    <string name="crimeSolved">Solved?</string>
    <string name="crimeList">Crime List</string>
    <string name="datePickerTitle">Date of Crime</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">If you see something, say something.</string>
    <string name="delete_crime">Delete</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">There is no suspect.</string>
    <string name="crime_report_suspect">The suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_suspect">Call %1$s </string>
    <string name="call_suspect_default">Call Suspect</string>
</resources>
